Version CVS HEAD (?)
  * general changes:
    - minor Makefile fix for parallel make
    - Mac OS X: link with CoreFoundation (for the UUID function)
    - removed gcc 4.7 warnings
    - modernized configure script
    - removed usage of deprecated Automake variable INCLUDES
    - added new command line tool "gigmerge"
    - added "const" keyword to several methods

  * SoundFont file format:
    - initial implementation
    - changed region lookup API to avoid malloc in RT threads
    - fixed GetEG1Sustain which didn't return correct value
    - bugfix: GetPan always returned -1, 0 or 1

  * src/gig.cpp:
    - bugfix: VCF velocity dynamic range and VCF velocity curve
      weren't saved correctly
    - implemented File::AddDuplicateInstrument()
    - bugfix: negative EG3 depth values were not correctly parsed or
      saved
    - added write support for CtrlTrigger midi rule
    - added read and write support for Legato and Alternator midi
      rules
    - bugfix: sample groups were sometimes created multiple times or with
      wrong textual group name
    - added new method File::AddContentOf() for merging .gig files

  * src/DLS.cpp, src/DLS.h:
    - added new method File::GetFileName()
    - fixed minor "memory leak on exception" bug found with cppcheck
    - added new method File::GetExtensionFile(int index)
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems
    - fixed memory leak and memory handling errors when file loading
      fails
    - added new method Chunk::ReadString
    - added new method File::SetFileName() allowing to call File::Save()
      later on without passing a file name
    - added new method File::IsNew()

  * src/gigextract.cpp:
    - export sample loop, unity note and fine tune with libsndfile

Version 3.3.0 (30 Jul 2009)
