@@ -1,4 +1,4 @@
 ## Process this file with automake to produce Makefile.in
 
 # all man files that should be installed
-man_MANS = dlsdump.1 gigdump.1 gigextract.1 gigmerge.1 rifftree.1
+man_MANS = dlsdump.1 gigdump.1 gigextract.1 gigmerge.1 gig2mono.1 rifftree.1
