@@ -14,7 +14,7 @@ filename of the DLS file
 .B \ -v
 print version and exit
 .SH "SEE ALSO"
-gigdump(1) rifftree(1)
+gigdump(1), rifftree(1)
 .SH "BUGS"
 None. Report bugs to http://bugs.linuxsampler.org
 .SH "Author"
