@@ -1,0 +1,36 @@
+.TH "gig2mono" "1" "29 Dec 2013" "libgig @VERSION@" "libgig tools"
+.SH NAME
+gig2mono \- Converts Gigasampler (.gig) files from stereo to mono.
+.SH SYNOPSIS
+.B gig2mono
+[ -v ] [ -r ] [ --left | --right | --mix ] FILE_OR_DIR1 [ FILE_OR_DIR2 ... ]
+.SH DESCRIPTION
+Takes a list of Gigasampler (.gig) files and / or directories as argument(s) and converts the individual Gigasampler files from stereo to mono audio format. Given directories are scanned for .gig files. The Gigasampler files are directly modified, not copied. Gigasampler files already being in mono format are ignored. Since at this point the Gigasampler format only defines mono and stereo samples, this program currently also assumes all samples in the .gig files provided to be either mono or stereo.
+.SH OPTIONS
+.TP
+.B \ FILE_OR_DIR1
+Gigasampler (.gig) filename or directory
+.TP
+.B \ FILE_OR_DIR2
+Gigasampler (.gig) filename or directory
+.TP
+.B \ -v
+Print version and exit.
+.TP
+.B \ -r
+Recurse through subdirectories.
+.TP
+.B \ --mix
+Convert by mixing left & right audio channels together (default).
+.TP
+.B \ --left
+Convert by using left audio channel data.
+.TP
+.B \ --right
+Convert by using right audio channel data.
+.SH "SEE ALSO"
+gigextract(1), gigdump(1), gigmerge(1)
+.SH "BUGS"
+None. Report bugs to http://bugs.linuxsampler.org
+.SH "Author"
+Written by Christian Schoenebeck <cuse@users.sf.net>
